# photoboxy

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/photoboxy/: __init__.py  __main__.py  cli.py  cluster.py  clusterer.py  config.py  directory.py  embedder.py  face_server.py  face_tag_manager.py  faces.py  items.py  mappings_importer.py  photobox_db.py  photoboxy.py  pool.py  recluster_1.py  tag_manager.py  template_manager.py  timeline_manager.py  update_exiftime.py  updater.py
src/photoboxy/templates/boring/: calendar.html  faces.html  faces_index.html  folder.html  image.html  note.html  server_face.html  server_home.html  server_page.html  shuffle.html  video.html
src/photoboxy/templates/boring/res/: canvas.js  common.css  slideshow.css  slideshow.js
templates/boring/: note.html  video.html
templates/boring/res/: common.css  swipe.js
tests/: describe_clusters.py  restructure_db.py  simple_tagging.py  test_photoboxr.py  test_photosdb.py  test_timeline.py
